# stateprep-qet

./: .gitignore  README.md  ploy.ipynb  ploy_no_h_aux3.ipynb  ploy_no_h_aux3_aux2.ipynb  pyproject.toml  test.ipynb  test.py
src/stateprep_qet/: classiq_Amplitude_Finding_Exact.ipynb  main.py  qsvt_mixed_parity.py  stateprep_guassian_n6_rate1.5.ipynb  stateprep_guassian_n6_rate1.ipynb  stateprep_guassian_n6_rate2.ipynb  stateprep_guassian_n7_rate1.5.ipynb  stateprep_guassian_n7_rate1.ipynb  stateprep_guassian_n7_rate2.ipynb  stateprep_guassian_n8_rate1.5.ipynb  stateprep_guassian_n8_rate1.ipynb  stateprep_guassian_n8_rate2.ipynb  utils.py  verifier.py
tests/: classiq_Amplitude_Finding_Exact.ipynb  classiq_qsvt.py  classiq_qsvt_usin.py  classiq_stateprep_gaussian.py  classiq_stateprep_gaussian_amplify.py  classiq_stateprep_tanh.py  classiq_stateprep_tanh_amplify.py  classiq_stateprep_tanh_manual_amplify.py  classiq_stateprep_usin_efficient.py  classiq_unitary.py  classiq_usin.ipynb  pennylane_qsvt.py  pyqsp_gaussian.ipynb  pyqsp_simple.py  stateprep_guassian_n7_rate0.5.ipynb  stateprep_guassian_n7_rate1.ipynb  stateprep_guassian_n7_rate2.ipynb  stateprep_guassian_n8_rate1.ipynb  stateprep_guassian_n8_rate2.ipynb  stateprep_guassian_n9_rate1.ipynb  stateprep_guassian_n9_rate2.ipynb  usin.ipynb  usin2.ipynb
