[project]
name = "stateprep-qet"
version = "0.1.0"
description = ""
authors = [
    {name = "Seungmin Jeon",email = "seungmin.jeon@cp.kaist.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "numpy (<2.0.0)",
    "classiq (>=0.73.0,<0.74.0)",
    "pyqsp (>=0.2.0,<0.3.0)",
    "pennylane (>=0.40.0,<0.41.0)",
    "httplib2 (>=0.22.0,<0.23.0)",
]

[tool.poetry]
packages = [{include = "stateprep_qet", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
